Remove hard rewrite and rollback to soft rewrite: UI update and small bugfixes

--- a/app/app-main/html/assets/application/css/app-discover.css
+++ b/app/app-main/html/assets/application/css/app-discover.css
@@ -431,7 +431,9 @@
             justify-content: center;
 
             img {
-                scale: 0.50;
+                position: relative;
+                width: 100%;
+                object-fit: contain;
             }
         }
 
