--- a/app/app-main/html/assets/cronos/css/app-base.css
+++ b/app/app-main/html/assets/cronos/css/app-base.css
@@ -109,9 +109,9 @@ a.button:hover {
 }
 
 .highlighted {
-    background: var(--accent) !important;
+    background: #8732EC80 !important;
     color: white !important;
-    box-shadow: 0 0 0.4rem var(--accent) !important;
+    box-shadow: 0 0 0.7rem var(--accent) !important;
     cursor: unset !important;
 }
 
