--- a/app/app-main/src/main/html/assets/application/css/app-discover.css
+++ b/app/app-main/src/main/html/assets/application/css/app-discover.css
@@ -69,11 +69,6 @@
     }
 }
 
-.search:hover {
-    border: 2px solid var(--border1) !important;
-    background: var(--background2) ;
-}
-
 .search.active {
     border: 2px solid var(--border1) !important;
     background: var(--background2) ;
@@ -99,6 +94,49 @@
 
 #search-buttons.active, #discover-buttons {
     display: inherit;
+
+    h3 {
+        background: var(--background7);
+        color: var(--foreground);
+        border-radius: 0.5rem;
+        margin-right: 0.5rem;
+        border: 1px solid var(--background) !important;
+        padding: 0.3rem 0.75rem 0.35rem 0.75rem;
+    }
+
+    h3:hover {
+        background: var(--foreground2);
+        color: var(--background5);
+        transition: all 0.25s ease;
+        cursor: pointer;
+        border: 1px solid var(--foreground) !important;
+    }
+    
+    h3.active {
+        cursor: unset;
+        border: 1px solid var(--accent2) !important;
+    }
+}
+
+.search:hover {
+    border: 2px solid var(--border1) !important;
+    background: var(--background2) ;
+
+    #discover-buttons {
+        h3 {
+            background: var(--background);
+            border: 1px solid var(--background3) !important;
+        }
+
+        h3:hover {
+            background: var(--foreground2);
+            border: 1px solid var(--foreground) !important;
+        }
+
+        h3.active {
+            border: 1px solid var(--accent2) !important;
+        }
+    }
 }
 
 .search .search-buttons .buttons {
@@ -387,7 +425,8 @@
     z-index: 1;
 }
 
-#discover-home {
+.discover-tab {
+    padding-top: 5rem;
     border-top-left-radius: 1.5rem;
     background: url("../images/background/discover-home.png") no-repeat center;
     background-size: cover;
@@ -415,41 +454,10 @@
         cursor: not-allowed;
     }
 
-    .home-quick {
-        position: relative;
-        height: 12rem;
-        top: 5rem;
-        margin-bottom: 1rem;
-
-        .nexus-logo, .app-logo {
-            overflow: hidden;
-            padding: 1rem;
-            width: calc(100% - 4rem);
-            height: calc(100% - 2rem);
+        img {
             position: relative;
-            display: flex;
-            justify-content: center;
-
-            img {
-                position: relative;
-                width: 100%;
-                object-fit: contain;
-            }
-        }
-
-        .nexus-logo:hover, .app-logo:hover {
-            transition: all 0.25s ease;
-            box-shadow: 0 0 0.8rem var(--shadow3);
-            background: var(--background6);
-            border-radius: 0.75rem;
-        }
-
-        .nexus-logo {
-            margin-left: 0.4rem;
-        }
-
-        .app-logo {
-            margin-right: 0.4rem;
+            width: 100%;
+            object-fit: contain;
         }
 
         .card {
@@ -505,21 +513,68 @@
             }
         }
 
-        .quick-access {
-            margin-right: 0.4rem;
-        }
+        .text-card {
+            .flex {
+                display: flex;
+                height: calc(100% - 3rem);
+                border-radius: 0.5rem;
+                width: 100%;
+                flex-direction: column;
 
-        .quick-links {
-            margin-left: 0.4rem;
+                p, .buttons {
+                    margin: 0 0.5rem;
+                    padding: 0 0.5rem;
+                    width: calc(100% - 2rem);
+                    overflow: hidden;
+                }
+
+                p {
+                    overflow-y: scroll;
+                    height: 100%;
+                }
+
+                .buttons {
+                    overflow-x: scroll;
+                    margin: 0 0.5rem 0 0.5rem;
+                    padding: 0.25rem 0.5rem 0.51rem 0.5rem;
+                    display: flex;
+
+                    h3 {
+                        position: relative;
+                        font-size: 1.1rem;
+                        margin: 0 0.25rem 0 0;
+                        padding: 0.2rem 0.5rem 0.25rem 0.5rem;
+                        border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
+                        width: fit-content;
+                        background: var(--background6);
+                        border: solid 1px var(--background3) !important;
+                    }
+
+                    h3:hover,h3.active {
+                        cursor: pointer;
+                        background: var(--foreground2);
+                        border: solid 1px var(--foreground) !important;
+                        color: var(--background5);
+                    }
+
+                    h3.active {
+                        cursor: unset;
+                        background: var(--accent);
+                        border: solid 1px var(--accent2) !important;
+                        color: var(--foreground);
+                    }
+                }
+            }
+
         }
 
         .line {
             margin: 0.1rem 1rem 0.25rem 1rem !important;
             width: calc(100% - 2rem);
         }
-    }
 
-    .home-quick.warning {
+
+    .warning {
         height: fit-content;
 
         .card.warning {
@@ -537,6 +592,45 @@
             }
         }
     }
+
+    .flex {
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        margin: 0;
+
+        img {
+            position: relative;
+            margin: 0.4rem;
+            padding: 0.8rem;
+            border-radius: 1rem;
+            height: auto;
+            width: calc(50% - 2.5rem);
+            max-height: 16rem;
+        }
+
+        img:hover {
+            background: var(--background6);
+            box-shadow: 0 0 0.4rem var(--shadow3);
+        }
+
+        .card {
+            position: relative;
+            margin: 0.4rem;
+
+            width: 50%;
+            height: auto;
+
+            .flex {
+
+                .buttons {
+                    h3 {
+                        padding-bottom: 1.2rem;
+                    }
+                }
+            }
+        }
+    }
 }
 
 #discover-news {
@@ -551,4 +645,12 @@
 
 #discover-games, #games-button {
     display: none;
+}
+
+* {
+    transition: none !important;
+}
+
+*:hover {
+    transition: all 0.25s ease !important;
 }
