--- a/app/app-main/src/main/html/assets/application/css/app-shared.css
+++ b/app/app-main/src/main/html/assets/application/css/app-shared.css
@@ -80,13 +80,23 @@ li:hover {
     display: none;
 }
 
+#background {
+    position: fixed;
+    background: var(--accent);
+    width: calc(100% - 20rem);
+    opacity: 0.5;
+    height: 100%;
+    right: 0;
+    z-index: 0;
+    border-top-left-radius: 1.5rem !important;
+}
+
 .cnt {
     width: 100%;
     height: 100%;
     padding: 0;
     border-top-left-radius: 1.5rem;
     position: relative;
-    background: var(--background);
     z-index: 101;
 }
 
