--- a/app/app-main/src/main/html/assets/application/css/app-settings.css
+++ b/app/app-main/src/main/html/assets/application/css/app-settings.css
@@ -128,6 +128,12 @@
     right: 0.7rem;
 }
 
+.settings .settings-content h3 .color input {
+    position: absolute;
+    top: 0; right: 0.1rem;
+    margin: 0.23rem;
+}
+
 .settings {
     .settings-content {
         h3 {
