--- a/app/app-main/src/main/html/assets/cronos/css/app-cards.css
+++ b/app/app-main/src/main/html/assets/cronos/css/app-cards.css
@@ -120,7 +120,7 @@
 }
 
 .card ul li.highlighted, .card ul li.active {
-    background: #8732EC90 !important;
+    background: var(--accent3) !important;
     box-shadow: 0 0 0.4rem var(--accent) !important;
     border: solid 1px var(--accent2) !important;
 }
