--- a/app/app-main/src/main/html/assets/cronos/css/app-colors-light.css
+++ b/app/app-main/src/main/html/assets/cronos/css/app-colors-light.css
@@ -24,8 +24,9 @@
     --foreground3: var(--background3);
 
     --highlight: #000000;
-    --accent: #8732ec;
-    --accent2: #a458ff;
+    --accent: #00000000;
+    --accent2: #00000000;
+    --accent3: #00000000;
 
     --active: #46e340;
     --inactive: #ff5858;
