Updater discover css

--- a/app/app-main/src/main/html/assets/application/css/app-discover.css
+++ b/app/app-main/src/main/html/assets/application/css/app-discover.css
@@ -384,6 +384,12 @@
     }
 }
 
+.result-image {
+    img {
+        background: var(--background6) !important;
+    }
+}
+
 
 .discover-tab {
     position: absolute;
