--- a/app/app-main/src/main/html/assets/application/css/app-settings.css
+++ b/app/app-main/src/main/html/assets/application/css/app-settings.css
@@ -9,6 +9,11 @@
     width: 100%; max-width: 100%;
     height: 100%; max-height: 100%;
     overflow: hidden;
+    background: var(--background);
+
+    border-top-left-radius: 1.5rem;
+    border-left: solid 1px var(--border);
+    border-top: solid 1px var(--border);
 }
 
 /*Initializing the menu container*/
