--- a/app/app-main/src/main/html/assets/cronos/css/app-colors-light.css
+++ b/app/app-main/src/main/html/assets/cronos/css/app-colors-light.css
@@ -8,9 +8,9 @@
     --background6: #ffffff75;
     --background7: #aaaaaa99;
 
-    --border: #ffffff90;
+    --border: #8c8c8c;
     --border1: var(--border);
-    --border2: #ffffff;
+    --border2: #a1a1a1;
 
     --shadow: #00000099;
     --shadow1: var(--shadow);
