--- a/app/app-main/src/main/html/assets/application/css/app-colors-oled.css
+++ b/app/app-main/src/main/html/assets/application/css/app-colors-oled.css
@@ -1,29 +1,29 @@
 :root {
-    --background: #0a0a0a;
+    --background: #000;
     --background1: var(--background);
-    --background2: #000000;
-    --background3: #0a0a0a;
-    --background4: #0a0a0a;
-    --background5: #000000;
-    --background6: #0a0a0a;
-    --background7: #0a0a0a75;
+    --background2: #0b0b0b;
+    --background3: var(--background);
+    --background4: var(--background);
+    --background5: var(--background);
+    --background6: #ffffff10;
+    --background7: #00000040;
 
-    --border: var(--background);
+    --border: #191919;
     --border1: var(--border);
-    --border2: #1c1c1c;
+    --border2: #232323;
 
-    --shadow: #ffffff99;
+    --shadow: #ffffff50;
     --shadow1: var(--shadow);
     --shadow2: #00000050;
     --shadow3: #000000;
     --shadow4: #ffffff99;
 
-    --foreground: #ffffff;
+    --foreground: #e3e3e3;
     --foreground1: var(--foreground);
-    --foreground2: #e3e3e3;
-    --foreground3: #272727;
+    --foreground2: #ffffff99;
+    --foreground3: var(--background3);
 
-    --highlight: #ffffff;
+    --highlight: var(--foreground);
     --accent: #00000000;
     --accent2: #00000000;
     --accent3: #00000000;
@@ -35,8 +35,4 @@
 body {
     background: var(--background);
     transition: background ease 0ms !important;
-}
-
-.search {
-    background: black !important;
 }
