--- a/app/app-main/src/main/html/assets/application/css/app-discover.css
+++ b/app/app-main/src/main/html/assets/application/css/app-discover.css
@@ -1,7 +1,7 @@
 .discover-content {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 1px);
     background: var(--background);
     border-top-left-radius: 1.5rem;
     overflow: hidden;
