--- a/app/app-main/src/main/html/assets/application/css/app-downloads.css
+++ b/app/app-main/src/main/html/assets/application/css/app-downloads.css
@@ -2,7 +2,7 @@
     border-top-left-radius: 1.5rem;
     position: relative;
     width: calc(100% - 2rem);
-    height: calc(100% - 2rem);
+    height: calc(100% - 2rem - 1px);
     padding: 1rem;
     margin: 0;
     color: var(--foreground);
