--- a/src/main/html/assets/nexus/css/settings.css
+++ b/src/main/html/assets/nexus/css/settings.css
@@ -3,38 +3,165 @@ table.table {
     overflow: hidden;
 
     tbody {
+
+        *:focus {
+            border: unset !important;
+            outline: 1px solid var(--nex-primary-accent) !important;
+            outline-offset: 1px;
+            box-shadow: 0 0 0 5px var(--nex-primary-dark);
+        }
+
         tr {
             td {
                 position: relative;
                 padding: 0.5rem 1rem;
-                text-align: center;
                 background: var(--bs-dark-bg-subtle);
 
+                * {
+                    transition: all 0.15s ease;
+                }
+
+                select {
+                    border-radius: var(--bs-border-radius-lg);
+                    position: absolute;
+                    padding: 0.15rem 1rem;
+                    right: 0;
+                    top: 0;
+                    margin: 0.325rem 1rem 0 0;
+                    width: calc(100% - 2rem);
+                }
+
+                .text-switch {
+                    z-index: 1;
+                    display: flex;
+
+                    .form-switch {
+                        margin-left: 0.5rem;
+                    }
+                }
+
                 input.range {
+                    width: calc(100% - 5rem);
+                    min-width: 5rem;
+                    max-width: 10rem;
                     position: absolute;
                     top: 0; right: 0;
-                    margin: 0.75rem 1rem 0.75rem 0.75rem;
+                    margin: 0.5rem 1rem 0.5rem 4rem;
                 }
 
                 input.number-display {
                     position: absolute;
                     top: 0; left: 0;
                     margin: 0.475rem;
+                    min-width: 2.5rem;
                     width: calc(100% - 1rem);
+                    max-width: 4rem;
                     padding-left: 1rem;
                     border: none;
                     background: var(--bs-body-bg);
                     border-radius: var(--bs-border-radius-lg);
                 }
 
-                input.color {
+                .colors {
                     position: absolute;
-                    border: none;
                     right: 0;
                     top: 0;
-                    padding: 0;
-                    margin: 0.45rem 1rem 0.45rem 0;
-                    cursor: pointer;
+                    margin: calc(0.45rem - 2px) 1rem calc(0.45rem - 2px) 0;
+
+                    .btn-group {
+                        border: 2px solid var(--nex-primary);
+                        box-shadow: 0 0 0.4rem var(--nex-primary);
+                    }
+
+                    .btn-group:has(button:focus) {
+                        border: 2px solid transparent;
+                        box-shadow: none;
+                    }
+
+                    button.btn {
+                        padding: 0.75rem 1rem;
+                    }
+
+                    button.btn:focus {
+                        outline-offset: 0 !important;
+                        border: none !important;
+                        outline: none !important;
+                    }
+
+                    .btn-nex-purple:focus {
+                        background: var(--nex-purple-accent);
+                        box-shadow: 0 0 0.4rem var(--nex-purple-accent);
+                    }
+
+                    .btn-nex-blue:focus {
+                        background: var(--nex-blue-accent);
+                        box-shadow: 0 0 0.4rem var(--nex-blue-accent);
+                    }
+
+                    .btn-nex-green:focus {
+                        background: var(--nex-green-accent);
+                        box-shadow: 0 0 0.4rem var(--nex-green-accent);
+                    }
+
+                    .btn-nex-red:focus {
+                        background: var(--nex-red-accent);
+                        box-shadow: 0 0 0.4rem var(--nex-red-accent);
+                    }
+
+                    .btn-nex-yellow:focus {
+                        background: var(--nex-yellow-accent);
+                        box-shadow: 0 0 0.4rem var(--nex-yellow-accent);
+                    }
+
+                }
+
+                .color-input {
+                    i {
+                        display: none;
+                        border-radius: var(--bs-border-radius-lg);
+                        justify-content: center;
+                        align-items: center;
+                        top: 0;
+                        margin: 0.45rem 0.3rem;
+                        position: absolute;
+                        right: 4rem;
+                        width: 1.715rem;
+                        height: 1.715rem;
+                        border: 1px solid var(--bs-border-color);
+                        overflow: hidden;
+                        background: var(--bs-body-bg);
+                    }
+
+                    i:hover {
+                        cursor: pointer;
+                        background: var(--bs-border-color);
+                    }
+
+                    input.color {
+                        border-radius: var(--bs-border-radius-lg);
+                        position: absolute;
+                        right: 0;
+                        height: 1.715rem;
+                        border: 1px solid var(--bs-border-color);
+                        top: 0;
+                        padding: 0;
+                        margin: 0.45rem 1rem 0.45rem 0;
+                        cursor: pointer;
+                        width: 3rem;
+                    }
+
+                    input[type="color"]::-moz-color-swatch {
+                        border: none;
+                    }
+
+                    input[type="color"]::-webkit-color-swatch-wrapper {
+                        padding: 0;
+                        border-radius: 0;
+                    }
+
+                    input[type="color"]::-webkit-color-swatch {
+                        border: none;
+                    }
                 }
 
                 input.switch {
