--- a/src/main/html/assets/nexus/css/shared.css
+++ b/src/main/html/assets/nexus/css/shared.css
@@ -183,8 +183,11 @@ button {
 body {
     background: var(--nex-bg);
 
+    #titlebar {
+        display: none;
+    }
+
     #main {
-        position: absolute;
         display: flex;
         width: 100%;
         height: 100%;
