force disable titlebar

--- a/src/main/html/assets/nexus/css/shared.css
+++ b/src/main/html/assets/nexus/css/shared.css
@@ -184,7 +184,7 @@ body {
     background: var(--nex-bg);
 
     #titlebar {
-        display: none;
+        display: none !important;
     }
 
     #main {
